--- a/dev-util/cvs/ChangeLog
+++ b/dev-util/cvs/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/cvs
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cvs/Attic/ChangeLog,v 1.51 2004/06/03 01:46:34 tgall Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/cvs/Attic/ChangeLog,v 1.52 2004/06/09 15:13:12 agriffis Exp $
+
+  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> cvs-1.11.16-r1.ebuild,
+  cvs-1.11.16.ebuild:
+  stable on alpha and ia64
 
   01 Jun 2004; Tom Gall <tgall@gentoo.org> cvs-1.11.16.ebuild:
   stable on ppc64
