--- a/media-libs/libsdl/ChangeLog
+++ b/media-libs/libsdl/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libsdl
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libsdl/ChangeLog,v 1.49 2004/06/07 19:15:05 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libsdl/ChangeLog,v 1.50 2004/06/09 15:37:54 agriffis Exp $
+
+  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> libsdl-1.2.6-r3.ebuild,
+  libsdl-1.2.7.ebuild:
+  Fix use invocation
 
   07 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org>
   files/1.2.7-joystick.patch:
