--- a/media-video/transcode/ChangeLog
+++ b/media-video/transcode/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-video/transcode
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/transcode/ChangeLog,v 1.66 2004/06/02 02:40:32 lv Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/transcode/ChangeLog,v 1.67 2004/06/09 17:39:29 agriffis Exp $
+
+  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> transcode-0.6.10.ebuild,
+  transcode-0.6.11.ebuild, transcode-0.6.12-r1.ebuild,
+  transcode-0.6.12.ebuild:
+  Fix use invocation
 
   01 Jun 2004; Travis Tilley <lv@gentoo.org> transcode-0.6.12-r1.ebuild:
   stable on amd64
