--- a/net-analyzer/iptraf/ChangeLog
+++ b/net-analyzer/iptraf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/iptraf
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/iptraf/Attic/ChangeLog,v 1.19 2004/06/05 13:20:08 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/iptraf/Attic/ChangeLog,v 1.20 2004/06/09 18:04:20 agriffis Exp $
+
+  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> iptraf-2.7.0-r1.ebuild:
+  Fix use invocation
 
   05 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> iptraf-2.7.0-r1.ebuild:
   Stable on alpha.
