--- a/net-analyzer/tleds/ChangeLog
+++ b/net-analyzer/tleds/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/tleds
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/tleds/ChangeLog,v 1.9 2004/01/23 02:06:05 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/tleds/ChangeLog,v 1.10 2004/06/09 18:31:22 agriffis Exp $
+
+  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> tleds-1.04-r1.ebuild,
+  tleds-1.05_beta11.ebuild:
+  Fix use invocation
 
   22 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org> tleds-1.04-r1.ebuild,
   tleds-1.05_beta11.ebuild:
