--- a/net-analyzer/ucd-snmp/ChangeLog
+++ b/net-analyzer/ucd-snmp/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/ucd-snmp
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/ucd-snmp/Attic/ChangeLog,v 1.22 2004/06/05 15:55:01 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/ucd-snmp/Attic/ChangeLog,v 1.23 2004/06/09 18:52:48 agriffis Exp $
+
+  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> ucd-snmp-4.2.6-r1.ebuild,
+  ucd-snmp-4.2.6-r2.ebuild:
+  Fix use invocation
 
   05 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> ucd-snmp-4.2.6-r2.ebuild:
   Stable on alpha.
