--- a/app-shells/dash/ChangeLog
+++ b/app-shells/dash/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-shells/dash
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/dash/ChangeLog,v 1.3 2004/06/09 20:48:22 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-shells/cvs-repo/gentoo-x86/app-shells/dash/ChangeLog,v 1.4 2004/06/09 21:20:51 lu_zero Exp $
+
+  09 Jun 2004; Luca Barbato <lu_zero@gentoo.org> dash-0.4.24.ebuild:
+  Marked ppc
 
 *dash-0.4.26 (09 Jun 2004)
 
