--- a/app-text/aspell/ChangeLog
+++ b/app-text/aspell/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/aspell
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/aspell/ChangeLog,v 1.40 2004/06/09 21:26:32 lu_zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/aspell/ChangeLog,v 1.41 2004/06/09 21:44:23 gmsoft Exp $
+
+  09 Jun 2004; Guy Martin <gmsoft@gentoo.org> aspell-0.50.5-r1.ebuild:
+  Marked stable on hppa.
 
   09 Jun 2004; Luca Barbato <lu_zero@gentoo.org> aspell-0.50.5-r1.ebuild:
   Marked ppc
