--- a/net-www/mozilla/ChangeLog
+++ b/net-www/mozilla/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-www/mozilla
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/mozilla/Attic/ChangeLog,v 1.170 2004/06/09 19:21:18 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/mozilla/Attic/ChangeLog,v 1.171 2004/06/09 21:48:24 agriffis Exp $
+
+*mozilla-1.7_rc3 (09 Jun 2004)
+
+  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> +mozilla-1.7_rc3.ebuild:
+  Update to 1.7_rc3
 
 *mozilla-1.7_rc2 (09 Jun 2004)
 
