--- a/net-misc/zebra/ChangeLog
+++ b/net-misc/zebra/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/zebra
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/zebra/Attic/ChangeLog,v 1.12 2004/04/27 21:56:49 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/zebra/Attic/ChangeLog,v 1.13 2004/06/09 22:36:45 agriffis Exp $
+
+  09 Jun 2004; Aron Griffis <agriffis@gentoo.org> zebra-0.93a.ebuild,
+  zebra-0.93b-r1.ebuild, zebra-0.93b-r2.ebuild, zebra-0.93b.ebuild:
+  Fix use invocation
 
   27 Apr 2004; Aron Griffis <agriffis@gentoo.org> zebra-0.93b-r1.ebuild:
   Add inherit eutils
