--- a/app-arch/unrar/ChangeLog
+++ b/app-arch/unrar/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-arch/unrar
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/unrar/ChangeLog,v 1.27 2004/06/10 05:49:23 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/unrar/ChangeLog,v 1.28 2004/06/10 05:52:32 mr_bones_ Exp $
+
+  09 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> unrar-3.1.3.ebuild,
+  unrar-3.3.6.ebuild:
+  IUSE; tidy
 
   09 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> unrar-3.3.4.ebuild:
   clean older ebuild
