--- a/app-text/crm114/ChangeLog
+++ b/app-text/crm114/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/crm114
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/crm114/ChangeLog,v 1.3 2004/06/09 08:09:08 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/crm114/ChangeLog,v 1.4 2004/06/10 08:09:07 dholm Exp $
+
+  10 Jun 2004; David Holm <dholm@gentoo.org> crm114-20040601.ebuild:
+  Added to ~ppc.
 
 *crm114-20040601 (09 Jun 2004)
 
