--- a/kde-base/kdeedu/ChangeLog
+++ b/kde-base/kdeedu/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for kde-base/kdeedu
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeedu/Attic/ChangeLog,v 1.76 2004/06/01 21:33:44 lv Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/kde-base/cvs-repo/gentoo-x86/kde-base/kdeedu/Attic/ChangeLog,v 1.77 2004/06/10 22:57:18 caleb Exp $
+
+*kdeedu-3.2.3 (10 Jun 2004)
+
+  10 Jun 2004; Caleb Tennis <caleb@gentoo.org> +kdeedu-3.2.3.ebuild:
+  Version bump
 
   01 Jun 2004; Travis Tilley <lv@gentoo.org> kdeedu-3.2.2.ebuild:
   stable on amd64
