--- a/dev-util/subversion/ChangeLog
+++ b/dev-util/subversion/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/subversion
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/subversion/Attic/ChangeLog,v 1.79 2004/06/10 22:45:29 klieber Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/subversion/Attic/ChangeLog,v 1.80 2004/06/10 23:19:56 kloeri Exp $
+
+  11 Jun 2004; Bryan Østergaard <kloeri@gentoo.org>
+  subversion-1.0.4-r1.ebuild:
+  Stable on alpha, bug #53555.
 
   10 Jun 2004; Kurt Lieber <klieber@gentoo.org> subversion-1.0.4-r1.ebuild:
   marking stable on x86. fixes 53555.
