--- a/x11-base/opengl-update/ChangeLog
+++ b/x11-base/opengl-update/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-base/opengl-update
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/opengl-update/Attic/ChangeLog,v 1.22 2004/06/08 19:10:01 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-base/cvs-repo/gentoo-x86/x11-base/opengl-update/Attic/ChangeLog,v 1.23 2004/06/11 02:21:38 spyderous Exp $
+
+  10 Jun 2004; Donnie Berkholz <spyderous@gentoo.org>;
+  opengl-update-1.7.1.ebuild:
+  ppc sparc arm amd64.
 
 *opengl-update-1.7.1 (08 Jun 2004)
 
