--- a/sys-libs/glibc/ChangeLog
+++ b/sys-libs/glibc/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/glibc
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.185 2004/06/11 07:38:36 kumba Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-libs/cvs-repo/gentoo-x86/sys-libs/glibc/ChangeLog,v 1.186 2004/06/11 07:55:24 kumba Exp $
+
+  11 Jun 2004; Joshua Kinard <kumba@gentoo.org>
+  glibc-2.3.4.20040605-r1.ebuild:
+  Fixup sparc bits in setup_flags.
 
 *glibc-2.3.4.20040605-r1 (11 Jun 2004)
 
