--- a/net-www/lynx/ChangeLog
+++ b/net-www/lynx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-www/lynx
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/lynx/Attic/ChangeLog,v 1.34 2004/06/05 17:08:00 tuxus Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/lynx/Attic/ChangeLog,v 1.35 2004/06/11 08:37:07 kloeri Exp $
+
+  11 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> lynx-2.8.5.ebuild:
+  Stable on alpha.
 
   05 Jun 2004; <tuxus@gentoo.org> lynx-2.8.5.ebuild:
   Stable on mips
