--- a/sys-devel/gettext/ChangeLog
+++ b/sys-devel/gettext/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/gettext
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.42 2004/06/02 19:42:56 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.43 2004/06/11 13:33:54 kloeri Exp $
+
+  11 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> gettext-0.12.1-r1.ebuild:
+  Stable on alpha.
 
   02 Jun 2004; Seemant Kulleen <seemant@gentoo.org> gettext-0.12.1-r1.ebuild,
   gettext-0.12.1.ebuild:
