--- a/games-simulation/flightgear/ChangeLog
+++ b/games-simulation/flightgear/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for games-simulation/flightgear
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-simulation/cvs-repo/gentoo-x86/games-simulation/flightgear/ChangeLog,v 1.10 2004/05/12 21:44:29 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-simulation/cvs-repo/gentoo-x86/games-simulation/flightgear/ChangeLog,v 1.11 2004/06/12 06:46:58 mr_bones_ Exp $
+
+  11 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org>
+  flightgear-0.9.4.ebuild:
+  ~amd64 for bug #52454
 
   12 May 2004; Michael Sterrett <mr_bones_@gentoo.org>
   flightgear-0.9.4.ebuild:
