--- a/x11-misc/peksystray/ChangeLog
+++ b/x11-misc/peksystray/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/peksystray
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/peksystray/ChangeLog,v 1.1 2004/01/10 17:55:15 taviso Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/peksystray/ChangeLog,v 1.2 2004/06/12 17:52:05 kloeri Exp $
+
+  12 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> peksystray-0.2.ebuild:
+  Stable on alpha.
 
 *peksystray-0.2 (10 Jan 2004)
 
