--- a/dev-python/mysql-python/ChangeLog
+++ b/dev-python/mysql-python/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/mysql-python
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/mysql-python/ChangeLog,v 1.9 2004/05/04 11:54:49 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/mysql-python/ChangeLog,v 1.10 2004/06/12 20:04:48 kloeri Exp $
+
+*mysql-python-1.0.0 (12 Jun 2004)
+
+  12 Jun 2004; Bryan Østergaard <kloeri@gentoo.org>
+  +mysql-python-1.0.0.ebuild:
+  Bump version, bug #53381.
 
   04 May 2004; Bryan Østergaard <kloeri@gentoo.org>
   mysql-python-0.9.2-r1.ebuild, mysql-python-0.9.2.ebuild:
