--- a/media-sound/zynaddsubfx/ChangeLog
+++ b/media-sound/zynaddsubfx/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/zynaddsubfx
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/zynaddsubfx/ChangeLog,v 1.8 2004/04/16 08:03:26 lv Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/zynaddsubfx/ChangeLog,v 1.9 2004/06/13 08:45:50 eradicator Exp $
+
+  13 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  zynaddsubfx-1.4.3.ebuild:
+  Getting rid of virtual/jack.
 
   16 Apr 2004; Travis Tilley <lv@gentoo.org> zynaddsubfx-1.4.3.ebuild:
   added ~amd64 keyword
