--- a/app-emacs/tramp/ChangeLog
+++ b/app-emacs/tramp/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/tramp
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/tramp/Attic/ChangeLog,v 1.8 2004/06/08 11:52:04 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emacs/cvs-repo/gentoo-x86/app-emacs/tramp/Attic/ChangeLog,v 1.9 2004/06/13 14:21:07 usata Exp $
+
+*tramp-2.0.41 (13 Jun 2004)
+
+  13 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> -tramp-2.0.38.ebuild,
+  +tramp-2.0.41.ebuild:
+  Version bumped.
 
   08 Jun 2004; David Holm <dholm@gentoo.org> tramp-2.0.39.ebuild:
   Added to ~ppc.
