--- a/app-emulation/vmware-workstation/ChangeLog
+++ b/app-emulation/vmware-workstation/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/vmware-workstation
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/vmware-workstation/ChangeLog,v 1.42 2004/06/14 12:02:18 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-emulation/cvs-repo/gentoo-x86/app-emulation/vmware-workstation/ChangeLog,v 1.43 2004/06/14 12:27:42 wolf31o2 Exp $
+
+*vmware-workstation-4.5.2.8848 (14 Jun 2004)
+
+  14 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  +vmware-workstation-4.5.2.8848.ebuild:
+  Adding version 4.5.2 and closing bug #53831.
 
   14 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org>
   vmware-workstation-4.5.1.7568-r1.ebuild,
