--- a/dev-perl/gnome2-wnck/ChangeLog
+++ b/dev-perl/gnome2-wnck/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/gnome2-wnck
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/gnome2-wnck/ChangeLog,v 1.1 2004/06/13 20:19:23 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/gnome2-wnck/ChangeLog,v 1.2 2004/06/14 13:08:59 dholm Exp $
+
+  14 Jun 2004; David Holm <dholm@gentoo.org> gnome2-wnck-0.04.ebuild:
+  Added to ~ppc.
 
 *gnome2-wnck-0.04 (13 Jun 2004)
 
