--- a/media-plugins/tap-plugins/ChangeLog
+++ b/media-plugins/tap-plugins/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/tap-plugins
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/tap-plugins/ChangeLog,v 1.4 2004/06/13 07:29:33 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/tap-plugins/ChangeLog,v 1.5 2004/06/14 13:12:15 dholm Exp $
+
+  14 Jun 2004; David Holm <dholm@gentoo.org> tap-plugins-0.4.0.ebuild:
+  Added to ~ppc.
 
 *tap-plugins-0.4.0 (13 Jun 2004)
 
