--- a/x11-misc/xbatt/ChangeLog
+++ b/x11-misc/xbatt/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xbatt
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xbatt/ChangeLog,v 1.3 2004/04/11 17:29:27 pyrania Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xbatt/ChangeLog,v 1.4 2004/06/14 18:33:17 pyrania Exp $
+
+  14 Jun 2004; <pyrania@gentoo.org> xbatt-1.2.1.ebuild:
+  Added IUSE.
 
   11 Apr 2004; Markus Nigbur <pyrania@gentoo.org> xbatt-1.2.1.ebuild:
   Ebuild fixups.
