--- a/x11-misc/xfontselector/ChangeLog
+++ b/x11-misc/xfontselector/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xfontselector
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xfontselector/Attic/ChangeLog,v 1.9 2004/04/11 07:46:56 lv Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xfontselector/Attic/ChangeLog,v 1.10 2004/06/14 18:32:44 pyrania Exp $
+
+  14 Jun 2004; <pyrania@gentoo.org> xfontselector-0.9.2.ebuild:
+  Added IUSE.
 
   10 Apr 2004; Travis Tilley <lv@gentoo.org> xfontselector-0.9.2.ebuild:
   changed xfree dependency to virtual/x11 and added ~amd64 keyword
