--- a/x11-misc/xlockmore/ChangeLog
+++ b/x11-misc/xlockmore/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xlockmore
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.11 2004/05/01 14:45:22 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.12 2004/06/14 18:43:07 pyrania Exp $
+
+  14 Jun 2004; <pyrania@gentoo.org> xlockmore-5.12.ebuild:
+  Stable on x86.
 
   01 May 2004; Jason Wever <weeve@gentoo.org> xlockmore-5.12.ebuild:
   Added ~sparc keyword.
