--- a/x11-terms/xterm/ChangeLog
+++ b/x11-terms/xterm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-terms/xterm
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.28 2004/06/13 22:53:32 spyderous Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-terms/cvs-repo/gentoo-x86/x11-terms/xterm/ChangeLog,v 1.29 2004/06/14 23:06:54 tgall Exp $
+
+  14 Jun 2004; Tom Gall <tgall@gentoo.org> xterm-191.ebuild:
+  ~ppc64, initial x support, bug #53763
 
   13 Jun 2004; Donnie Berkholz <spyderous@gentoo.org>; xterm-191.ebuild:
   Change virtual/x11 dep because of #8810.
