--- a/app-accessibility/brltty/ChangeLog
+++ b/app-accessibility/brltty/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-accessibility/brltty
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.6 2004/05/11 17:00:48 squinky86 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/brltty/ChangeLog,v 1.7 2004/06/15 03:05:10 squinky86 Exp $
+
+*brltty-3.5 (14 Jun 2004)
+
+  14 Jun 2004; Jon Hood <squinky86@gentoo.org> +brltty-3.5.ebuild:
+  version bump
 
 *brltty-3.5.0_pre3 (11 May 2004)
 
