--- a/app-accessibility/speechd/ChangeLog
+++ b/app-accessibility/speechd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-accessibility/speechd
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/speechd/Attic/ChangeLog,v 1.6 2004/04/20 09:02:00 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-accessibility/cvs-repo/gentoo-x86/app-accessibility/speechd/Attic/ChangeLog,v 1.7 2004/06/15 04:07:25 eradicator Exp $
+
+  14 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org>
+  speechd-0.56-r1.ebuild:
+  Stable amd64.
 
   20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org>
   speechd-0.56-r1.ebuild:
