--- a/dev-libs/expat/ChangeLog
+++ b/dev-libs/expat/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/expat
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/expat/ChangeLog,v 1.30 2004/05/15 09:21:23 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/expat/ChangeLog,v 1.31 2004/06/15 06:26:16 solar Exp $
+
+  15 Jun 2004; <solar@gentoo.org> expat-1.95.6-r1.ebuild,
+  files/expat-1.95.6-uclibc.patch:
+  added uclibc patch for configure target
 
   15 May 2004; Bryan Østergaard <kloeri@gentoo.org> expat-1.95.7.ebuild:
   Stable on alpha.
