--- a/app-sci/xephem/ChangeLog
+++ b/app-sci/xephem/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-sci/xephem
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/xephem/Attic/ChangeLog,v 1.10 2004/06/15 06:17:44 phosphan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/xephem/Attic/ChangeLog,v 1.11 2004/06/15 17:01:35 kugelfang Exp $
+
+  15 Jun 2004; Danny van Dyk <kugelfang@gentoo.org> xephem-3.6.ebuild:
+  Marked ~amd64 and ~ppc, as previous ebuild had both KEYWORDS. See BUG #53859.
 
 *xephem-3.6 (15 Jun 2004)
 
