--- a/app-misc/gentoo/ChangeLog
+++ b/app-misc/gentoo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/gentoo
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gentoo/ChangeLog,v 1.40 2004/06/14 18:39:00 pyrania Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/gentoo/ChangeLog,v 1.41 2004/06/16 03:45:07 weeve Exp $
+
+  15 Jun 2004; Jason Wever <weeve@gentoo.org> gentoo-0.11.51.ebuild:
+  Stable on sparc.
 
   14 Jun 2004; <pyrania@gentoo.org> gentoo-0.11.51.ebuild:
   Marked x86.
