--- a/dev-dotnet/pnetlib/ChangeLog
+++ b/dev-dotnet/pnetlib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-dotnet/pnetlib
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-dotnet/cvs-repo/gentoo-x86/dev-dotnet/pnetlib/Attic/ChangeLog,v 1.13 2004/05/29 13:03:38 scandium Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-dotnet/cvs-repo/gentoo-x86/dev-dotnet/pnetlib/Attic/ChangeLog,v 1.14 2004/06/16 03:51:42 weeve Exp $
+
+  15 Jun 2004; Jason Wever <weeve@gentoo.org> pnetlib-0.6.6.ebuild:
+  Stable on sparc.
 
 *pnetlib-0.6.6 (29 May 2004)
 
