--- a/app-admin/killproc/ChangeLog
+++ b/app-admin/killproc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/killproc
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/killproc/ChangeLog,v 1.7 2004/03/12 10:32:39 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/killproc/ChangeLog,v 1.8 2004/06/16 03:58:13 eradicator Exp $
+
+  15 Jun 2004; Jeremy Huddleston <eradicator@gentoo.org> +metadata.xml:
+  Added ~amd64.
 
   12 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org>
   killproc-1.12-r2.ebuild:
