--- a/net-print/hpijs/ChangeLog
+++ b/net-print/hpijs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-print/hpijs
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/hpijs/Attic/ChangeLog,v 1.25 2004/06/15 03:14:08 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/hpijs/Attic/ChangeLog,v 1.26 2004/06/16 06:42:31 weeve Exp $
+
+  16 Jun 2004; Jason Wever <weeve@gentoo.org> hpijs-1.5.ebuild:
+  Stable on sparc.
 
   14 Jun 2004; Aron Griffis <agriffis@gentoo.org> hpijs-1.4.1.ebuild,
   hpijs-1.5.ebuild:
