--- a/net-print/hpijs/ChangeLog
+++ b/net-print/hpijs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-print/hpijs
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/hpijs/Attic/ChangeLog,v 1.26 2004/06/16 06:42:31 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-print/cvs-repo/gentoo-x86/net-print/hpijs/Attic/ChangeLog,v 1.27 2004/06/16 21:52:30 gustavoz Exp $
+
+  16 Jun 2004; Gustavo Zacarias <gustavoz@gentoo.org> hpijs-1.5.ebuild:
+  Stable on hppa
 
   16 Jun 2004; Jason Wever <weeve@gentoo.org> hpijs-1.5.ebuild:
   Stable on sparc.
