--- a/dev-util/biew/ChangeLog
+++ b/dev-util/biew/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/biew
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/biew/ChangeLog,v 1.6 2004/06/03 17:45:13 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/biew/ChangeLog,v 1.7 2004/06/17 18:47:27 spock Exp $
+
+  17 Jun 2004; Michal Januszewski <spock@gentoo.org> biew-5.6.1.ebuild:
+  Added a workaround to solve bug #53825.
 
   03 Jun 2004; Aron Griffis <agriffis@gentoo.org> biew-5.5.0.ebuild,
   biew-5.6.1.ebuild:
